# sparseNMF

./: .gitignore  .readthedocs.yaml  Dockerfile  Dockerfile.cpu  Dockerfile.gpu  LICENSE  README.md  codecov.yml  netlify.toml  pyproject.toml
.github/workflows/: ci.yml  docker.yml  docs.yml  release.yml
benchmarks/: ONBOARDING.md  io.py  results-k-sweep.csv  results.csv  results.json  results.md  run_benchmark.py  scib_benchmark.py  viz.py
benchmarks/methods/: harmony.py  nmf.py  pca.py  scvi.py  sparse_nmf.py  sparse_nmf_batch.py  sparse_nmf_nonzero.py
benchmarks/metrics/: scib_original.py  scib_yosef.py
benchmarks/runs/full-seeds-v1/: results-batch-variant.csv  results-k-sweep.csv  results-k300-supervised.csv  results-multi-seed.csv
benchmarks/runs/full-seeds-v1/batch-variant/seed-0/: results.csv  results.json  results.md
benchmarks/runs/full-seeds-v1/batch-variant/seed-1/: results.csv  results.json  results.md
benchmarks/runs/full-seeds-v1/batch-variant/seed-2/: results.csv  results.json  results.md
benchmarks/runs/full-seeds-v1/full-seeds/seed-0/: results.csv  results.json
benchmarks/runs/full-seeds-v1/full-seeds/seed-1/: results.csv  results.json  results.md
benchmarks/runs/full-seeds-v1/full-seeds/seed-2/: results.csv  results.json  results.md
benchmarks/runs/full-seeds-v1/k-sweep/k-10/: results.csv  results.json  results.md
benchmarks/runs/full-seeds-v1/k-sweep/k-100/: results.csv  results.json  results.md
benchmarks/runs/full-seeds-v1/k-sweep/k-1000/: results.csv  results.json  results.md
benchmarks/runs/full-seeds-v1/k-sweep/k-1000-immune/: results.csv  results.json  results.md
benchmarks/runs/full-seeds-v1/k-sweep/k-1000-lung/: results.csv  results.json  results.md
benchmarks/runs/full-seeds-v1/k-sweep/k-1000-sim1/: results.csv  results.json  results.md
benchmarks/runs/full-seeds-v1/k-sweep/k-1000-sim2/: results.csv  results.json  results.md
benchmarks/runs/full-seeds-v1/k-sweep/k-20/: results.csv  results.json  results.md
benchmarks/runs/full-seeds-v1/k-sweep/k-2000/: results.csv  results.json  results.md
benchmarks/runs/full-seeds-v1/k-sweep/k-2000-immune/: results.csv  results.json  results.md
benchmarks/runs/full-seeds-v1/k-sweep/k-2000-lung/: results.csv  results.json  results.md
benchmarks/runs/full-seeds-v1/k-sweep/k-2000-sim1/: results.csv  results.json  results.md
benchmarks/runs/full-seeds-v1/k-sweep/k-2000-sim2/: results.csv  results.json  results.md
benchmarks/runs/full-seeds-v1/k-sweep/k-30/: results.csv  results.json  results.md
benchmarks/runs/full-seeds-v1/k-sweep/k-300/: results.csv  results.json  results.md
benchmarks/runs/full-seeds-v1/k-sweep/k-300-immune/: results.csv  results.json  results.md
benchmarks/runs/full-seeds-v1/k-sweep/k-300-lung/: results.csv  results.json  results.md
benchmarks/runs/full-seeds-v1/k-sweep/k-300-sim2/: results.csv  results.json  results.md
benchmarks/runs/full-seeds-v1/k-sweep/k-50/: results.csv  results.json  results.md
benchmarks/runs/full-seeds-v1/k300-supervised/seed-0/: results.csv  results.json  results.md
benchmarks/runs/full-seeds-v1/k300-supervised/seed-1/: results.csv  results.json  results.md
benchmarks/runs/full-seeds-v1/k300-supervised/seed-2/: results.csv  results.json  results.md
benchmarks/runs/full-seeds-v1/scib-original-seed-0/: results.md
benchmarks/runs/full-seeds-v1/scib-original-seed-0/immune/Harmony/: metrics_original.json  timing.json
benchmarks/runs/full-seeds-v1/scib-original-seed-0/immune/NMF/: metrics_original.json  timing.json
benchmarks/runs/full-seeds-v1/scib-original-seed-0/immune/PCA/: metrics_original.json
benchmarks/runs/full-seeds-v1/scib-original-seed-0/immune/scVI/: metrics_original.json  metrics_yosef.json
benchmarks/runs/full-seeds-v1/scib-original-seed-0/immune/sparseNMF/: metrics_original.json  timing.json
benchmarks/runs/full-seeds-v1/scib-original-seed-0/lung/Harmony/: metrics_original.json  timing.json
benchmarks/runs/full-seeds-v1/scib-original-seed-0/lung/NMF/: metrics_original.json  timing.json
benchmarks/runs/full-seeds-v1/scib-original-seed-0/lung/PCA/: metrics_original.json  metrics_yosef.json
benchmarks/runs/full-seeds-v1/scib-original-seed-0/lung/scVI/: metrics_original.json  metrics_yosef.json
benchmarks/runs/full-seeds-v1/scib-original-seed-0/lung/sparseNMF/: metrics_original.json  metrics_yosef.json  timing.json
benchmarks/runs/full-seeds-v1/scib-original-seed-0/pancreas/Harmony/: metrics_original.json  metrics_yosef.json
benchmarks/runs/full-seeds-v1/scib-original-seed-0/pancreas/NMF/: metrics_original.json  metrics_yosef.json
benchmarks/runs/full-seeds-v1/scib-original-seed-0/pancreas/PCA/: metrics_original.json
benchmarks/runs/full-seeds-v1/scib-original-seed-0/pancreas/scVI/: metrics_original.json  metrics_yosef.json  timing.json
benchmarks/runs/full-seeds-v1/scib-original-seed-0/pancreas/sparseNMF/: metrics_original.json
benchmarks/runs/full-seeds-v1/scib-original-seed-0/sim1/Harmony/: metrics_yosef.json  (+2 more)
benchmarks/runs/subprocess-v1/: results.csv  results.json  results.md
benchmarks/scripts/: aggregate_seeds.py  rebuild_scib_lisi.sh  run_full_seeds_and_k_sweep.sh  run_hyperparam_sweep.py
data/: generate_sample_data.py
docs/: api.rst  benchmark.rst  changelog.rst  conf.py  contributing.rst  examples.rst  hyperparam_guidance.rst  index.rst  install.rst  prior_works.rst  quickstart.rst  tutorials.rst
docs/_static/: zoom-init.js  zoom.css
docs/_static/hyperparam_sweep/: results.csv
docs/notebooks/: 01_basic_nmf.ipynb  02_joint_model.ipynb  03_sparsity_confound_demo.ipynb  04_real_pancreas_demo.ipynb
docs/team-updates/: 2026-05-14-update.md
examples/: _determinism.py  basic_usage.py  joint_model.py  real_pancreas_demo.py  real_pbmc3k_demo.py  sparsity_confound_demo.py
scripts/: build_notebooks.py
src/sparse_nmf/: __init__.py  _batch_aware.py  _core.py  _hyper_sweep.py  utils.py
src/sparse_nmf/data/: __init__.py
tests/: conftest.py  test_attention.py  test_batch_aware.py  test_core.py  test_data.py  test_hyper_sweep.py  test_joint.py  test_plot.py
(+282 files in other folders)
