[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sparse-nmf"
version = "0.1.0"
description = "GPU-accelerated sparse non-negative matrix factorization with PyTorch"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Brian Schilder", email = "brian@standardmodel.bio" }]
keywords = [
    "nmf",
    "matrix-factorization",
    "sparse",
    "gpu",
    "pytorch",
    "phenome",
    "embedding",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "torch>=2.0",
    "tqdm>=4.65",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.7", "seaborn>=0.12"]
docs = [
    "sphinx>=7.2",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
    "myst-nb>=1.1",
    "sphinx-autodoc-typehints>=2.0",
    "sphinx-copybutton>=0.5",
    "matplotlib>=3.7",
    "ipywidgets>=8.0",
]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "coverage-badge>=1.1",
    # matplotlib + seaborn needed to test ``plot_nmf_factor_distributions``
    # — otherwise that 230-line function stays uncovered. Cheap to
    # install on CI (~50MB), and skipping the test instead would
    # leave a chunk of public API unverified.
    "matplotlib>=3.7",
    "seaborn>=0.12",
    # pyarrow is pandas's parquet engine — needed to test
    # ``extract_and_aggregate_attention(save_dir=...)`` which writes
    # the aggregated DataFrames as .parquet. Same logic as matplotlib:
    # this is a real upstream dep that users with that flag set will
    # also need; better to test the full code path on CI.
    "pyarrow>=14.0",
    # scikit-learn supplies ``normalize`` for the ``normalize_inputs=True``
    # branch of train_sparse_nmf. Standalone sparseNMF doesn't need
    # the rest of sklearn for runtime, but the test path does.
    "scikit-learn>=1.3",
]
dev = ["sparse-nmf[viz,docs,test]"]

[project.urls]
Homepage = "https://github.com/bschilder/sparseNMF"
Documentation = "https://sparsenmf.netlify.app"
Repository = "https://github.com/bschilder/sparseNMF"
Issues = "https://github.com/bschilder/sparseNMF/issues"
Changelog = "https://github.com/bschilder/sparseNMF/releases"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"sparse_nmf" = ["py.typed"]
"sparse_nmf.data" = ["*.npz"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-q",
    "--strict-markers",
    "--strict-config",
    "--cov=sparse_nmf",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=xml",
]
testpaths = ["tests"]
markers = [
    "gpu: tests that need a CUDA device (skipped on CPU-only CI)",
    "slow: tests > ~5s",
]

[tool.coverage.run]
branch = true
source = ["sparse_nmf"]

[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    # CUDA-only cache-management, init, and probing paths. The
    # CPU-only CI runners that build the coverage badge can't reach
    # these — the same logic on the CPU code path is exercised;
    # these are purely GPU-cache management calls (free a tensor,
    # clear the allocator) and CUDA-availability probes that gate
    # GPU init. Patterns are deliberately broad to catch the various
    # forms the upstream code uses (``device``, ``self.device``,
    # ``model_device``, ``device_str``).
    "\\.device\\.type == .cuda.:",
    "if .cuda. in (str\\()?device(_str)?(\\))?:",
    "if .cuda. in str\\(model_device\\):",
    "torch\\.cuda\\.empty_cache\\(\\)",
    "torch\\.cuda\\.get_device_properties",
    "torch\\.cuda\\.is_available\\(\\)",
    "device = torch\\.device\\(.cuda",
    "device = torch\\.device\\(device_str\\)",
    "if use_gpu_for_matmul",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]
extend-exclude = [
    # Notebook outputs are rendered + committed; their per-cell
    # imports trip E402, but they're not maintained code we lint.
    "docs/notebooks/*.ipynb",
    # ``_core.py`` is the verbatim-vendored module from
    # bschilder/AoU. Reformatting it would diverge from upstream
    # and fight every sync.
    "src/sparse_nmf/_core.py",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # bugbear
    "UP", # pyupgrade
    "SIM", # simplify
]
ignore = [
    "E501",  # line-too-long — formatter handles
    "B008",  # function-call-in-default-argument — common idiom in scientific code
]

# ``_core.py`` is the verbatim-vendored module from bschilder/AoU.
# Its style isn't in scope for this package — fixing 400+ pre-existing
# whitespace / f-string warnings in a 4k-line file would invite merge
# conflicts every time AoU updates upstream. Linting is enforced on
# the wrapper / tests / docs we own.
[tool.ruff.lint.per-file-ignores]
"src/sparse_nmf/_core.py" = ["E", "W", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
files = ["src/sparse_nmf"]
